samples/_failures_safe/1761792759_26ecb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d45ebf7.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_4d45ebf7.c:185:23: error: expected declaration or statement at end of input
  185 | void freeGraph(struct Graph* graph) {
      |                       ^~~~~
